# saas-auth-ssot

./: .gitignore  Cargo.toml  LICENSE  README.md  ssot.example.config
.github/workflows/: upload-to-release.yaml
migrations/2022-03-19-204925_add_customers/: up.sql
migrations/2022-03-20-214326_add_apikey/: down.sql  up.sql
src/: flow_run.rs  main.rs  routes.rs  server.rs
src/api/: apikey.rs  callback.rs  login.rs  mod.rs  register.rs  sso.rs
src/utils/: config.rs  jwt.rs  mail_sso.rs  mod.rs
templates/: sso.html  sso.stpl
