[package]
name = "saas-auth-ssot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sproot = { git = "https://github.com/speculare-cloud/sproot" }
actix-cors = { version = "0.6" }
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = { version = "4.1", features = ["rustls"] }
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0"
config = "0.13"
diesel = { version = "2.0.0-rc.1", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0.0-rc.1"
jsonwebtoken = "8.1"
lettre = { version = "0.10", features = ["rustls-tls"] }
log = "0.4"
once_cell = "1.13"
rand = "0.8"
r2d2 = "0.8"
sailfish = "0.4"
serde = { version = "1.0", features = ["derive"] }
sys_metrics = { git = "https://github.com/Martichou/sys_metrics" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.1" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1